--- a/AdvancedProjectWebApi/appsettings.json
+++ b/AdvancedProjectWebApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTBearerParams": {
+    "Key": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+    "Subject": "foo",
+    "Audience": "bar",
+    "Issuer":  "baz"
+  }
 }
