Added JWT authorization and removed usage of session

--- a/AdvancedProjectWebApi/appsettings.json
+++ b/AdvancedProjectWebApi/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "JWTBearerParams": {
-    "Key": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+    "Key": "/B?E(H+MbQeThWmZq4t6w9z$C&F)J@NcRfUjXn2r5u8x!A%D*G-KaPdSgVkYp3s6",
     "Subject": "foo",
     "Audience": "bar",
-    "Issuer":  "baz"
+    "Issuer": "https://www.allkeysgenerator.com/Random/Security-Encryption-Key-Generator.aspx"
   }
 }
