--- a/AdvancedProjectWebApi/appsettings.json
+++ b/AdvancedProjectWebApi/appsettings.json
@@ -11,5 +11,12 @@
     "Subject": "foo",
     "Audience": "bar",
     "Issuer": "https://www.allkeysgenerator.com/Random/Security-Encryption-Key-Generator.aspx"
+  },
+  "MailSettings": {
+    "Mail": "whatsapplikewebproject@gmail.com",
+    "DisplayName": "doNotReply-WebAppVerCode",
+    "Password": "5747Israel",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
