--- a/AdvancedProjectWebApi/AdvancedProjectWebApi.csproj
+++ b/AdvancedProjectWebApi/AdvancedProjectWebApi.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
 </Project>
