--- a/AdvancedProjectWebApi/appsettings.json
+++ b/AdvancedProjectWebApi/appsettings.json
@@ -15,8 +15,8 @@
   "MailSettings": {
     "Mail": "whatsapplikewebproject@gmail.com",
     "DisplayName": "doNotReply-WebAppVerCode",
-    "Password": "5747Israel",
-    "Host": "smtp.gmail.com",
+    "Password": "gBKRH605ybaIGpcx",
+    "Host": "smtp-relay.sendinblue.com",
     "Port": 587
   }
 }
