Added react code to server, cleaned imports, made all configuration in appsettings.json

--- a/AdvancedProjectWebApi/appsettings.json
+++ b/AdvancedProjectWebApi/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MariaDB": "server=localhost;port=3306;database=ErezYuvalProjectServer;user=root;password=5747Israel"
+  },
   "JWTBearerParams": {
     "Key": "/B?E(H+MbQeThWmZq4t6w9z$C&F)J@NcRfUjXn2r5u8x!A%D*G-KaPdSgVkYp3s6",
     "Subject": "foo",
@@ -18,5 +21,10 @@
     "Password": "gBKRH605ybaIGpcx",
     "Host": "smtp-relay.sendinblue.com",
     "Port": 587
+  },
+  "AllowedOrigins": {
+    "React": "http://localhost:3000",
+    "WebAPI": "https://localhost:7031",
+    "WebServer": "https://localhost:7035"
   }
 }
