--- a/AdvancedProgrammingProjectsServer/appsettings.json
+++ b/AdvancedProgrammingProjectsServer/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AdvancedProgrammingProjectsServerContext": "server=localhost;port=3306;database=Items;user=root;password=5747Israel"
+    "MariaDB": "server=localhost;port=3306;database=ErezYuvalProjectServer;user=root;password=5747Israel"
   }
 }
