--- a/AdvancedProgrammingProjectsServer/AdvancedProgrammingProjectsServer.csproj
+++ b/AdvancedProgrammingProjectsServer/AdvancedProgrammingProjectsServer.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkcore.Tools" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
