Made modifications for signing up and operating android device with firebase - unrelated to 2nd assignment

--- a/AdvancedProjectWebApi/appsettings.json
+++ b/AdvancedProjectWebApi/appsettings.json
@@ -26,5 +26,15 @@
     "React": "http://localhost:3000",
     "WebAPI": "https://localhost:7031",
     "WebServer": "https://localhost:7035"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:7030"
+      },
+      "Https": {
+        "Url": "https://localhost:7031"
+      }
+    }
   }
 }
