--- a/AdvancedProjectWebApi/Properties/launchSettings.json
+++ b/AdvancedProjectWebApi/Properties/launchSettings.json
@@ -1,11 +1,11 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false,
+    "windowsAuthentication": true,
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:7755",
-      "sslPort": 44310
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7031;http://localhost:5031",
+      "applicationUrl": "https://localhost:7031;http://localhost:5031;",
       "dotnetRunMessages": true
     },
     "IIS Express": {
