--- a/AdvancedProjectWebApi/appsettings.json
+++ b/AdvancedProjectWebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MariaDB": "server=localhost;port=3306;database=ErezYuvalProjectServer;user=root;password=P@$$W0rd"
+    "MariaDB": "server=localhost;port=3306;database=ErezYuvalProjectServer;user=root;password=5747Israel"
   },
   "JWTBearerParams": {
     "Key": "/B?E(H+MbQeThWmZq4t6w9z$C&F)J@NcRfUjXn2r5u8x!A%D*G-KaPdSgVkYp3s6",
